--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.main.allow-bean-definition-overriding=true
 logging.level.org.springframework.cloud.gateway.handler.RouterPredicateHandlerMapping=DEBUG
